update requirements.txt and pip upgrade

--- a/app/templates/merchandise/edit.html
+++ b/app/templates/merchandise/edit.html
@@ -25,6 +25,7 @@
         <input type="number" name="price" id="price" value="{{item.price}}">
     </div>
     <input type="submit" value="Submit Order">
+    <!-- <input type="submit" value="Submit Order"> -->
 
 </form>
 </div>
