--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -185,6 +185,16 @@ header {
     color: #666;
 }
 
+.card{
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 300px;
+    margin: 0 auto;
+    background-color: #fff;
+
+}
 
 /* media query for base navigation for all pages*/
 @media only screen and (max-width: 1320px) {
