--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,7 @@
                 </li>
     
                 <li>
-                    <a href="{{url_for('merchandise.merchandise')}}">Merchandise</a>
+                    <a href="/merchandise">Merchandise</a>
                 </li>
                 <li>
                     <a href="/about">About</a>
