authentication and deployment

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,6 +35,13 @@
                 <li>
                     <a href="/about">About</a>
                 </li>
+                <li>
+                    <a href="/register">Register</a>
+                </li>
+                <li>
+                    <a href="/login">Login</a>
+                </li>
+
                 
             </ul>
         </nav>
